Refactor: Update translations to use "Seasonal" terminology
This commit updates various translation files to replace "Chapter" with "Seasonal" across multiple languages. The changes include:
- Renaming translation keys from "chapter" to "seasonal"
- Updating text references to use "seasonalTicket" instead of "chapterTicket"
- Ensuring consistent seasonal terminology across different language dictionaries

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4574,7 +4574,7 @@
   "whatsOn.sflMarketplace": "SFL Marketplace",
   "whatsOn.auctionWeek": "Auction Week",
   "whatsOn.animalCompetition": "Animal Competition",
-  "whatsOn.mysterySeason": "Mystery Season",
+  "whatsOn.mysterySeason": "Mystery Chapter",
   "whatsOn.bullRunText": "The bull run chapter begins! Grab your VIP banner and prepare for the race.",
   "whatsOn.cowSkullsText": "Cow Skulls and new puzzles have appeared in the desert!",
   "whatsOn.choreBoardText": "A new 7 day chore board is now available.",
@@ -4588,7 +4588,7 @@
   "whatsOn.sflMarketplaceText": "The $SFL marketplace is now live! Trade $SFL for NFTs.",
   "whatsOn.auctionText": "Compete and outbid your friends for the best NFTs!",
   "whatsOn.animalCompetitionText": "Complete tasks & climb the leaderboard to win prizes & $SFL!",
-  "whatsOn.mysterySeasonText": "Prepare your resources & master the marketplace. The mystery season is coming!",
+  "whatsOn.mysteryChapterText": "Prepare your resources & master the marketplace. The mystery chapter is coming!",
   "whatsOn.date.nov1": "November 1st",
   "whatsOn.date.nov4": "November 4th",
   "whatsOn.date.nov6Dec11": "November 6th - Jan 31st",
@@ -5143,7 +5143,7 @@
   "whatsOn.timeshardsUsage": "Collect enough Timeshards to purchase NFTs at the Megastore and Auction House.",
   "whatsOn.vipPass": "Grab your VIP Pass for bonus Timeshards and perks!",
   "whatsOn.skillSystem": "New skill system launched!",
-  "whatsOn.seasonCompetition": "Season Competition",
+  "whatsOn.chapterCompetition": "Chapter Competition",
   "whatsOn.april14th": "14th April",
   "whatsOn.may1st": "1st May",
   "season.hasBegun": "{{name}} has begun!",
