--- a/src/lib/i18n/dictionaries/ko.json
+++ b/src/lib/i18n/dictionaries/ko.json
@@ -123,13 +123,13 @@
   "beehive.hives.plural": "염증",
   "birdieplaza.birdieIntro": "안녕하세요, 저는 세상에서 가장 아름다운 범프킨인 버디예요!",
   "birdieplaza.admiringOutfit": "내 옷차림에 감탄하는 걸 봤어.환상적이지 않나요?!?",
-  "birdieplaza.currentChapter": "우리는 현재 {{currentSeason}} 시즌이고 범프킨은 {{chapterTicket}} s에 열광하고 있습니다.",
-  "birdieplaza.collectTickets": "{{chapterTicket}} 를 충분히 모으면 희귀 NFT를 만들 수 있습니다.그렇게 해서 이 희귀한 의상을 얻게 됐어요!",
-  "birdieplaza.whatIsChapter": "시즌이란 무엇인가요?",
-  "birdieplaza.howToEarnTickets": "{{chapterTicket}}?",
-  "birdieplaza.earnTicketsVariety": "다양한 방법으로 {{chapterTicket}} 를 벌 수 있습니다.",
-  "birdieplaza.gatherAndCraft": "{{chapterTicket}} 를 충분히 모으면 저처럼 희귀 아이템을 살 수 있을 거예요.",
-  "birdieplaza.newChapterIntro": "선플라워 랜드에서는 3개월마다 새로운 시즌이 시작됩니다.",
+  "birdieplaza.currentSeason": "우리는 현재 {{currentSeason}} 시즌이고 범프킨은 {{seasonalTicket}} s에 열광하고 있습니다.",
+  "birdieplaza.collectTickets": "{{seasonalTicket}} 를 충분히 모으면 희귀 NFT를 만들 수 있습니다.그렇게 해서 이 희귀한 의상을 얻게 됐어요!",
+  "birdieplaza.whatIsSeason": "시즌이란 무엇인가요?",
+  "birdieplaza.howToEarnTickets": "{{seasonalTicket}}?",
+  "birdieplaza.earnTicketsVariety": "다양한 방법으로 {{seasonalTicket}} 를 벌 수 있습니다.",
+  "birdieplaza.gatherAndCraft": "{{seasonalTicket}} 를 충분히 모으면 저처럼 희귀 아이템을 살 수 있을 거예요.",
+  "birdieplaza.newSeasonIntro": "선플라워 랜드에서는 3개월마다 새로운 시즌이 시작됩니다.",
   "description.speed.chicken.one": "이제 닭이 달걀을 10% 더 빨리 생산할 수 있습니다.",
   "description.banana.chicken": "바나나를 부스트하는 치킨.우리가 살고 있는 세상은 정말 대단합니다.",
   "description.pharaoh.chicken": "최고의 치킨, +1 디그.",
@@ -496,7 +496,7 @@
   "chores.chopTrees": "나무 3그루를 자르세요",
   "chores.helpWithTrees": "내 오래된 뼈는 예전 같지 않아. 베야 할 이 망할 나무들을 좀 빌려줄 수 있겠나?현지 대장장이가 도구 제작을 도와줄 거예요.",
   "chores.noChore": "미안해요, 지금 해야 할 집안일은 없어요.",
-  "chores.newChapter": "새 시즌이 다가오면 집안일이 일시적으로 종료됩니다.",
+  "chores.newSeason": "새 시즌이 다가오면 집안일이 일시적으로 종료됩니다.",
   "chores.choresFrozen": "새로운 계절 집안일이 곧 제공될 예정입니다.",
   "kingdomChores.preparing": "잠시만 기다려 주세요.집안일을 준비하고 있어요.",
   "kingdomChores.completed": "지금은 집안일을 모두 마친 것 같습니다.빨리 돌아와!",
@@ -558,7 +558,7 @@
   "confirmation.sell": "정말로 {{amount}} {{name}} 를 {{coinAmount}} 코인에 판매하시겠습니까?",
   "confirmation.buyCrops": "정말로 {{coinAmount}} 코인을 사용하여 {{seedNo}} {{seedName}} 를 구매하시겠습니까?",
   "confirmation.enterAmount": "판매 금액 입력:",
-  "confirmation.sellChapterArtefact": "이 현상금은 계절 특산품입니다!정말 팔고 싶으세요?",
+  "confirmation.sellSeasonalArtefact": "이 현상금은 계절 특산품입니다!정말 팔고 싶으세요?",
   "confirmation.valuableTreasure": "이 현상금은 매우 귀중합니다!정말 팔고 싶으세요?",
   "confirm.skillClaim": "정말 스킬을 획득하고 싶으신가요?",
   "faction-intro.one": "새 팩션 하우스에 오신 것을 환영합니다...더 강력해지고 왕국을 지배하려면 여러분의 도움이 필요합니다.",
@@ -1929,9 +1929,9 @@
   "fruit.guide.one": "과일은 선플라워 랜드에서 코인으로 판매하거나 다양한 레시피와 제작에 활용할 수 있는 귀중한 자원으로서 중요한 역할을 합니다.농작물과 달리 과일 밭은 수확 후 여러 번 채울 수 있는 독특한 능력을 가지고 있어 플레이어에게 지속 가능한 과일 공급원을 제공합니다.",
   "fruit.guide.two": "과일을 심으려면 페탈 파라다이스로 업그레이드한 후 사용할 수 있는 더 큰 과일 패치를 구입해야 합니다.",
   "fruit.guide.three": "과일을 재배하고 농업 전략에 통합하면 수익을 극대화하고 맛있는 요리법을 만들고 Sunflower Land에서 새로운 가능성을 열 수 있습니다.",
-  "chapters.guide.one": "Sunflower Land의 시즌은 게임에 흥미와 신선함을 가져다 주며 플레이어에게 새로운 도전과 기회를 제공합니다.매 시즌마다 플레이어는 다양한 새로운 웨어러블 및 수집품, 시즌 뮤턴트, 희귀 보물을 기대하며 역동적이고 진화하는 게임플레이 경험을 만들 수 있습니다.이를 통해 플레이어는 전략을 조정하고 농장에서 새로운 가능성을 탐색할 수 있습니다.또한 시즌 티켓은 게임에 전략적 요소를 더합니다. 플레이어는 희귀 아이템을 수집하거나, 장식과 화장품을 선택하거나, 티켓을 코인으로 교환하는 등 티켓을 현명하게 할당하는 방법을 결정해야 합니다.시즌 메카닉은 게임을 더욱 흥미롭게 만들고 Sunflower Land에서 항상 기대되는 무언가를 찾을 수 있게 해줍니다.",
-  "chapters.guide.two": "Stella's Mega Store, 옥션 하우스, Jafar's 매장에서 시즌 한정 웨어러블과 수집품을 구입할 수 있다는 점은 선플라워 랜드에 또 다른 재미를 더합니다.플레이어는 시즌 티켓, 보물 및 기타 특정 요구 사항을 수집하여 이러한 시즌 아이템을 제작하거나 경매에 입찰해야 경쟁심과 긴박감을 조성할 수 있습니다.플레이어가 시간이 다 가기 전에 원하는 아이템을 확보하는 것을 목표로 하기 때문에 미리 계획하고 전략을 세우는 것이 매우 중요합니다.",
-  "chapters.guide.three": "Sunflower Land는 매 시즌마다 독특한 상품을 제공하고 깜짝 이벤트를 기대하며 연중 내내 플레이어의 참여와 즐거움을 유지하여 활기차고 끊임없이 진화하는 농업 경험을 제공합니다.",
+  "seasons.guide.one": "Sunflower Land의 시즌은 게임에 흥미와 신선함을 가져다 주며 플레이어에게 새로운 도전과 기회를 제공합니다.매 시즌마다 플레이어는 다양한 새로운 웨어러블 및 수집품, 시즌 뮤턴트, 희귀 보물을 기대하며 역동적이고 진화하는 게임플레이 경험을 만들 수 있습니다.이를 통해 플레이어는 전략을 조정하고 농장에서 새로운 가능성을 탐색할 수 있습니다.또한 시즌 티켓은 게임에 전략적 요소를 더합니다. 플레이어는 희귀 아이템을 수집하거나, 장식과 화장품을 선택하거나, 티켓을 코인으로 교환하는 등 티켓을 현명하게 할당하는 방법을 결정해야 합니다.시즌 메카닉은 게임을 더욱 흥미롭게 만들고 Sunflower Land에서 항상 기대되는 무언가를 찾을 수 있게 해줍니다.",
+  "seasons.guide.two": "Stella's Mega Store, 옥션 하우스, Jafar's 매장에서 시즌 한정 웨어러블과 수집품을 구입할 수 있다는 점은 선플라워 랜드에 또 다른 재미를 더합니다.플레이어는 시즌 티켓, 보물 및 기타 특정 요구 사항을 수집하여 이러한 시즌 아이템을 제작하거나 경매에 입찰해야 경쟁심과 긴박감을 조성할 수 있습니다.플레이어가 시간이 다 가기 전에 원하는 아이템을 확보하는 것을 목표로 하기 때문에 미리 계획하고 전략을 세우는 것이 매우 중요합니다.",
+  "seasons.guide.three": "Sunflower Land는 매 시즌마다 독특한 상품을 제공하고 깜짝 이벤트를 기대하며 연중 내내 플레이어의 참여와 즐거움을 유지하여 활기차고 끊임없이 진화하는 농업 경험을 제공합니다.",
   "pete.teaser.one": "나무를 잘게 썬다",
   "pete.teaser.three": "해바라기를 수확하세요",
   "pete.teaser.four": "해바라기 팔기",
@@ -1946,7 +1946,7 @@
   "harvestflower.notReady": "꽃을 수확할 준비가 되지 않았습니다",
   "harvestflower.alr.plant": "꽃은 이미 심어졌습니다",
   "hayseedHankv2.dialog1": "안녕하세요, 젊은 위퍼스내퍼들!저는 헤이시드 행크 (Hayseed Hank) 예요. 옛날처럼 땅을 가꾸는 노련한 범프킨 농부예요.",
-  "hayseedHankv2.dialog2": "하지만 내 뼈는 예전만 못하다.제가 매일 하는 집안일을 도와주시면 {{chapterTicket}} 로 보답하겠습니다.",
+  "hayseedHankv2.dialog2": "하지만 내 뼈는 예전만 못하다.제가 매일 하는 집안일을 도와주시면 {{seasonalTicket}} 로 보답하겠습니다.",
   "hayseedHankv2.action": "해봅시다",
   "hayseedHankv2.title": "행크의 일일 집안일",
   "hayseedHankv2.newChoresAvailable": "새로운 집안일: {{timeLeft}}",
@@ -2517,7 +2517,7 @@
   "npcDialogues.bert.intro2": "아, 킨드레드 스피릿!해바라기에는 셀 수 없이 많은 보물이 있습니다...",
   "npcDialogues.bert.intro3": "안녕하세요, 신비의 소지자!해바라기에서는 일부 품목이 배송을 요구합니다...",
   "npcDialogues.bert.intro4": "안녕하세요, 컨실드 시커!선플로레아의 마법은 두 가지로 분류할 수 있습니다...",
-  "bert.day": "{{chapterTicket}} s를 청구한 후 3일 동안은 이 아이템을 철회할 수 없습니다.",
+  "bert.day": "{{seasonalTicket}} s를 청구한 후 3일 동안은 이 아이템을 철회할 수 없습니다.",
   "npcDialogues.bert.positiveDelivery1": "놀랍습니다!필요한 건 다 가져다 주셨어요...",
   "npcDialogues.bert.positiveDelivery2": "오, 놀라운 발견!제가 찾던 물건들을 정확히 가져오셨군요...",
   "npcDialogues.bert.positiveDelivery3": "아, 시간이 됐네요!제가 찾던 바로 그 아이템을 얻으셨군요.훌륭해요!",
@@ -2739,10 +2739,10 @@
   "plaza.magicButton.query": "광장에 마법의 단추가 등장했습니다.눌러볼래?",
   "nyonStatue.memory": "를 기념하여",
   "nyonStatue.description": "광산에서 고블린을 제거하는 일을 담당한 전설의 기사.승리 후 얼마 지나지 않아 그는 고블린 공모자에게 독살당해 사망했습니다.선플라워 시티즌은 그의 정복을 기념하기 위해 그의 갑옷과 함께 이 동상을 세웠습니다.",
-  "obsessionDialogue.line1": "아, {{itemName}}!보고 싶을 뿐, 소유하고 싶지는 않아요.보여주세요. {{chapterTicket}} s가 보상이 될 거예요.",
-  "obsessionDialogue.line2": "{{itemName}} 를 가져왔나요?그냥 보고 싶을 뿐이야.어디 보자. {{chapterTicket}} s는 네 것이 될 거야.",
-  "obsessionDialogue.line4": "{{itemName}}!보관하고 싶진 않아요. 그냥 보기 위해서요.보여주세요. {{chapterTicket}} s는 당신 거예요.",
-  "obsessionDialogue.line5": "{{itemName}} 의 전망을 제공합니까?제가 부탁하는 건 간단히 살펴보라는 것뿐입니다.여러분의 관대함에 따라 {{chapterTicket}} 가 수여됩니다.",
+  "obsessionDialogue.line1": "아, {{itemName}}!보고 싶을 뿐, 소유하고 싶지는 않아요.보여주세요. {{seasonalTicket}} s가 보상이 될 거예요.",
+  "obsessionDialogue.line2": "{{itemName}} 를 가져왔나요?그냥 보고 싶을 뿐이야.어디 보자. {{seasonalTicket}} s는 네 것이 될 거야.",
+  "obsessionDialogue.line4": "{{itemName}}!보관하고 싶진 않아요. 그냥 보기 위해서요.보여주세요. {{seasonalTicket}} s는 당신 거예요.",
+  "obsessionDialogue.line5": "{{itemName}} 의 전망을 제공합니까?제가 부탁하는 건 간단히 살펴보라는 것뿐입니다.여러분의 관대함에 따라 {{seasonalTicket}} 가 수여됩니다.",
   "offer.okxOffer": "안녕하세요 파머, 독점 OKX 혜택을 준비했습니다!",
   "offer.beginWithNFT": "시작하려면 무료 팜 NFT를 발행해야 합니다.여기에는 다음이 포함됩니다.",
   "offer.getStarterPack": "지금 스타터 팩을 구매하세요",
@@ -2773,8 +2773,8 @@
   "onCollectReward.Missing.Shovel": "사라진 삽",
   "onCollectReward.Missing.Shovel.description": "섬을 확장하여 찾아보세요.",
   "orderhelp.Skip.hour": "24시간 이후에만 주문을 건너뛸 수 있습니다!",
-  "orderhelp.New.Chapter": "새 시즌이 다가옴에 따라 티켓 배송이 일시적으로 마감됩니다.",
-  "orderhelp.New.Chapter.arrival": "계절 배송이 곧 시작됩니다...",
+  "orderhelp.New.Season": "새 시즌이 다가옴에 따라 티켓 배송이 일시적으로 마감됩니다.",
+  "orderhelp.New.Season.arrival": "계절 배송이 곧 시작됩니다...",
   "orderhelp.Wisely": "현명하게 선택하세요!",
   "orderhelp.SkipIn": "스킵 인",
   "orderhelp.NoRight": "지금은 아니야",
@@ -2899,18 +2899,18 @@
   "rules.noBots": "봇팅이나 자동화가 필요 없음",
   "rules.termsOfService": "서비스 약관",
   "sceneDialogues.chefIsBusy": "셰프가 바빠요",
-  "chapter.access": "다음에 액세스할 수 있습니다.",
-  "chapter.banner": "시즌 배너",
-  "chapter.bonusTickets": "보너스 시즌 티켓",
-  "chapter.boostXP": "음식 획득 경험치 10% 증가",
-  "chapter.buyNow": "지금 구매하기",
-  "chapter.discount": "시즌 상품 25% SFL 할인",
-  "chapter.exclusiveOffer": "독점 혜택!",
-  "chapter.goodLuck": "시즌에 행운을 빕니다!",
-  "chapter.includes": "포함 사항:",
-  "chapter.limitedOffer": "기간 한정!",
-  "chapter.wearableAirdrop": "시즌별 웨어러블 에어드랍",
-  "chapter.place.land": "당신은 그것을 당신의 땅에 놓아야 합니다",
+  "season.access": "다음에 액세스할 수 있습니다.",
+  "season.banner": "시즌 배너",
+  "season.bonusTickets": "보너스 시즌 티켓",
+  "season.boostXP": "음식 획득 경험치 10% 증가",
+  "season.buyNow": "지금 구매하기",
+  "season.discount": "시즌 상품 25% SFL 할인",
+  "season.exclusiveOffer": "독점 혜택!",
+  "season.goodLuck": "시즌에 행운을 빕니다!",
+  "season.includes": "포함 사항:",
+  "season.limitedOffer": "기간 한정!",
+  "season.wearableAirdrop": "시즌별 웨어러블 에어드랍",
+  "season.place.land": "당신은 그것을 당신의 땅에 놓아야 합니다",
   "season.megastore.discount": "메가스토어 SFL 할인",
   "season.supporter.gift": "서포터 기프트",
   "season.free.season.passes": "프리 시즌 배너",
@@ -2923,18 +2923,18 @@
   "season.lifetime.farmer": "라이프타임 파머",
   "season.free.with.lifetime": "라이프타임 파머와 함께라면 무료",
   "season.ticket.bonus": "+2 {{item}} s (배달 및 집안일)",
-  "chapter.codex.intro": "이 기간 한정 시즌에 {{ticket}} s를 적립하여 농장을 위한 독점 수집품과 웨어러블을 만드세요... 시간이 끝나기 전에 서두르세요!",
-  "chapter.codex.howToEarn": "{{ticket}} 를 어떻게 벌 수 있나요?",
-  "chapter.codex.howToEarn.one": "광장을 방문하여 범킨스에게 자원을 전달하세요.",
-  "chapter.codex.nextDrop": "넥스트 드롭",
-  "chapter.codex.chapterDrops": "시즌 드랍",
-  "chapter.codex.chapterDrops.description": "가장 희귀한 아이템을 놓고 다른 사람들과 경쟁하세요!자세한 내용은 광장에 있는 경매인을 방문하십시오.",
-  "chapter.codex.soldOut": "매진",
-  "chapter.codex.mutants": "돌연변이",
-  "chapter.codex.mutants.discover": "계절별 돌연변이를 발견하세요!",
-  "chapter.codex.mutants.one": "알을 모아 {{item}} 를 발견하세요.",
-  "chapter.codex.mutants.two": "{{item}} 를 위해 깊은 곳에서 낚시하세요.",
-  "chapter.codex.mutants.three": "꽃을 실험하여 {{item}} 를 찾아보세요.",
+  "season.codex.intro": "이 기간 한정 시즌에 {{ticket}} s를 적립하여 농장을 위한 독점 수집품과 웨어러블을 만드세요... 시간이 끝나기 전에 서두르세요!",
+  "season.codex.howToEarn": "{{ticket}} 를 어떻게 벌 수 있나요?",
+  "season.codex.howToEarn.one": "광장을 방문하여 범킨스에게 자원을 전달하세요.",
+  "season.codex.nextDrop": "넥스트 드롭",
+  "season.codex.seasonalDrops": "시즌 드랍",
+  "season.codex.seasonalDrops.description": "가장 희귀한 아이템을 놓고 다른 사람들과 경쟁하세요!자세한 내용은 광장에 있는 경매인을 방문하십시오.",
+  "season.codex.soldOut": "매진",
+  "season.codex.mutants": "돌연변이",
+  "season.codex.mutants.discover": "계절별 돌연변이를 발견하세요!",
+  "season.codex.mutants.one": "알을 모아 {{item}} 를 발견하세요.",
+  "season.codex.mutants.two": "{{item}} 를 위해 깊은 곳에서 낚시하세요.",
+  "season.codex.mutants.three": "꽃을 실험하여 {{item}} 를 찾아보세요.",
   "share.TweetText": "마이 선플라워 랜드 팜 방문하기",
   "share.ShareYourFarmLink": "팜 링크 공유",
   "share.ShowOffToFarmers": "농장 링크를 공유하여 동료 농부들에게 자랑하세요",
@@ -3423,8 +3423,8 @@
   "description.gold.beetle.boost": "+0.1 골드",
   "description.stone.beetle.boost": "+0.1 스톤",
   "description.iron.beetle.boost": "+0.1 아이언",
-  "available.all.chapter": "올 시즌 이용 가능",
-  "megastore.message.allChapter": "시즌 내내 구매할 수 있는 아이템을 소개합니다.시즌이 끝나기 전에 꼭 구매하세요!",
+  "available.all.season": "올 시즌 이용 가능",
+  "megastore.message.allSeason": "시즌 내내 구매할 수 있는 아이템을 소개합니다.시즌이 끝나기 전에 꼭 구매하세요!",
   "monthly": "월간",
   "seasonal": "계절별",
   "mega.collectibles": "메가 콜렉터블",
@@ -3528,11 +3528,11 @@
   "gems.update": "젬 업데이트",
   "gems.intro": "신규 플레이어의 온보딩을 준비하기 위해 블록 벅스를 새로운 화폐인 보석으로 교체했습니다!",
   "gems.intro.two": "블록벅을 소유할 때마다 보석 20개를 받게 됩니다.",
-  "birdieplaza.commonMethod": "{{chapterTicket}} s를 얻는 가장 일반적인 방법은 자원을 수집하거나 다른 요청 아이템을 수집하여 플라자 및 기타 지역의 범킨에게 전달하는 것입니다.",
-  "birdieplaza.chapterQuests": "이번 시즌에는 흥미진진한 퀘스트, 희귀 수집품, 획득할 수 있는 독점 웨어러블이 있습니다.",
-  "birdieplaza.craftItems": "이러한 희귀 아이템을 얻으려면 {{chapterTicket}} s를 모아 스텔라의 메가스토어에서 교환하거나 경매장에서 입찰해야 합니다.",
+  "birdieplaza.commonMethod": "{{seasonalTicket}} s를 얻는 가장 일반적인 방법은 자원을 수집하거나 다른 요청 아이템을 수집하여 플라자 및 기타 지역의 범킨에게 전달하는 것입니다.",
+  "birdieplaza.seasonQuests": "이번 시즌에는 흥미진진한 퀘스트, 희귀 수집품, 획득할 수 있는 독점 웨어러블이 있습니다.",
+  "birdieplaza.craftItems": "이러한 희귀 아이템을 얻으려면 {{seasonalTicket}} s를 모아 스텔라의 메가스토어에서 교환하거나 경매장에서 입찰해야 합니다.",
   "reward.streak.oneYear": "365일 연속 보상",
-  "chapter.codex.nextDrop.available": "{{dropSupply}} 사용 가능",
+  "season.codex.nextDrop.available": "{{dropSupply}} 사용 가능",
   "description.hoot.boost": "+0.5 밀, 무, 케일, 쌀, 보리",
   "description.barley": "보리는 동물 사료에 사용되는 영양가 높은 곡물입니다.",
   "gems.speedUp": "스피드 업",
@@ -3583,7 +3583,7 @@
   "description.chicken": "신선한 계란과 부드러운 깃털이 믿을 수 있는 공급원인 이 닭고기는 올바른 관리만 하면 기꺼이 제 역할을 해냅니다.",
   "description.cow": "이 부드러운 젖소는 신선한 우유와 튼튼한 가죽을 제공합니다.푸짐한 음식과 애정으로 행복한 시간을 보내세요.",
   "description.sheep": "이 푹신한 양은 일반 울과 고급스러운 메리노 울을 모두 제공합니다.아주 부드러운 결과를 위해 계속 사용하세요!",
-  "obsessionDialogue.line3": "이게 당신이 가지고 있는 {{itemName}} 인가요?내가 원하는 건 그저 한 번 보는 것뿐이야.이를 위해 {{chapterTicket}} 를 받게 됩니다.",
+  "obsessionDialogue.line3": "이게 당신이 가지고 있는 {{itemName}} 인가요?내가 원하는 건 그저 한 번 보는 것뿐이야.이를 위해 {{seasonalTicket}} 를 받게 됩니다.",
   "competition.maybeLater": "아마 나중에",
   "world.lvl.requirement": "레벨 {{lvl}}",
   "world.factionMembersOnly": "팩션 멤버 전용",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "범프킨은 노란 카네이션을 소중히 여기지 않아요.",
   "noBumpkin.bumpkinHelp": "땅을 심고, 수확하고, 자르고, 채굴하고, 확장하는 데 도움이 되는 범프킨이 필요합니다.범프킨 추가 지원이 곧 제공될 예정입니다!",
   "chores.weeklyChores": "주간 집안일",
-  "chores.completeChoresToEarn": "범프킨의 집안일을 완료하여 {{chapterTicket}} 를 벌세요.",
+  "chores.completeChoresToEarn": "범프킨의 집안일을 완료하여 {{seasonalTicket}} 를 벌세요.",
   "chores.lockedChore": "레벨 {{level}}",
   "chores.completed": "완료됨",
   "chores.complete": "완료",
@@ -4040,18 +4040,18 @@
   "description.free.range": "+0.1 애니멀 프로듀스",
   "description.chicken.coop": "닭을 기르는 데 사용할 수 있는 닭장입니다.이 희귀한 닭장으로 계란 생산량을 늘리세요.",
   "description.gold.egg": "황금 달걀.안에 있는 것은 행운을 가져다주는 존재로 알려져 있습니다.",
-  "chapter.codex.howToEarn.two": "범프킨의 집안일을 완료하세요.(11월 11일)",
-  "chapter.codex.howToEarn.three": "동물과 꽃 현상금을 거래하세요!(11월 11일)",
+  "season.codex.howToEarn.two": "범프킨의 집안일을 완료하세요.(11월 11일)",
+  "season.codex.howToEarn.three": "동물과 꽃 현상금을 거래하세요!(11월 11일)",
   "description.cowboyHat.boost": "+1 호스슈즈",
   "description.cowboyShirt.boost": "+1 호스슈즈",
   "description.cowboyTrouser.boost": "+1 호스슈즈",
-  "chapter.codex.howToEarn.comingSoon": "집안일, 배달, 현상금으로 말굽을 획득하세요!",
+  "season.codex.howToEarn.comingSoon": "집안일, 배달, 현상금으로 말굽을 획득하세요!",
   "description.cropCircle": "농장에 나타난 신비한 원... 무슨 뜻일까요?",
   "description.omnifeed": "모든 동물에게 가장 좋은 사료로 작용합니다.",
   "description.brush": "애니멀 브러쉬.이 제품을 사용해 동물에게 애정을 표현하세요.",
   "description.music.box": "동물에게 음악을 재생합니다.이를 사용해 동물에게 애정을 표현하세요.",
   "levelUpMax": "최대 레벨!",
-  "birdieplaza.choresAndRewards": "또한 주간 집안일, 일일 상자 보상, 버트의 이상한 집착, 현상금 시스템을 통해서도 {{chapterTicket}} 를 얻을 수 있습니다!",
+  "birdieplaza.choresAndRewards": "또한 주간 집안일, 일일 상자 보상, 버트의 이상한 집착, 현상금 시스템을 통해서도 {{seasonalTicket}} 를 얻을 수 있습니다!",
   "description.community.coin": "(WIP) 선플라워 랜드에서 나중에 사용할 수 있도록 예약되어 있는 가치 있는 주화입니다.",
   "bedsMigration.bedsNeededDescription2": "각각의 독특한 침대는 농장에서 한 손도 잘 수 있습니다.",
   "bedsMigration.bedsNeededDescription3": "더 많은 농부를 고용하려면 침대를 배치하세요!",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "아이템 판매",
   "marketplace.congratulationsItemSold": "축하합니다. 상품이 판매되었습니다!",
   "withdraw.taxFree": "고블린은 게임 내에서 획득한 SFL에 세금을 부과합니다.예금 및 마켓플레이스는 제외됩니다.",
-  "bounties.board.ticketAmount": "{{chapterTicket}} 의 금액은 요청에 따라 매주 달라집니다.",
+  "bounties.board.ticketAmount": "{{seasonalTicket}} 의 금액은 요청에 따라 매주 달라집니다.",
   "marketplace.listing.cancelling": "리스팅 취소",
   "marketplace.listing.cancelling.success": "축하합니다. 리스팅이 성공적으로 취소되었습니다!",
   "marketplace.listing.cancelling.failure": "죄송합니다. 문제가 발생했습니다.다시 시도해 주세요.",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} 일일 구매 잔량",
   "remaining.free.purchase": "하루 구매 수량 1개 남음",
   "statements.potionRule.four": "게임이 완료되면 마지막 시도의 점수에 따라 보상이 결정됩니다.",
-  "obsessionDialogue.codex": "이게 당신이 가지고 있는 {{itemName}} 인가요?광장으로 가서 버트를 찾아 보여 주면 그 대가로 {{chapterTicket}} 를 줄 거예요.",
+  "obsessionDialogue.codex": "이게 당신이 가지고 있는 {{itemName}} 인가요?광장으로 가서 버트를 찾아 보여 주면 그 대가로 {{seasonalTicket}} 를 줄 거예요.",
   "bounties.board.travel": "광장으로 가서 Poppy를 찾아 이러한 현상금을 달성하세요.",
   "description.trade.points": "마켓플레이스에서 수집품과 웨어러블을 거래하여 수익을 올렸습니다.게임 내 보상으로 교환할 수 있습니다.",
   "reward.collectible": "농장을 위한 수집품",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "판매 잠금 해제",
   "marketplace.unlockOffering": "오퍼링 잠금 해제",
   "marketplace.vip.access": "무제한 마켓플레이스 액세스",
-  "marketplace.vip.chapter.access": "시즌 동안 무제한 마켓플레이스 이용",
+  "marketplace.vip.season.access": "시즌 동안 무제한 마켓플레이스 이용",
   "marketplace.welcome.one": "안녕하세요, 파트너!마켓플레이스에 오신 것을 환영합니다.농장의 맛을 느낄 수 있는 모든 것을 원스톱으로 구매할 수 있는 곳입니다.",
   "marketplace.welcome.two": "여기서 자원을 교환하고, 독점 수집품을 구입하고, 농장을 강화할 수 있습니다.",
   "marketplace.welcome.three": "마켓플레이스는 선플라워 랜드의 통화인 $SFL을 독점적으로 사용합니다.게임 내에서 또는 다른 플레이어와 거래하여 $SFL을 벌 수 있습니다.",
