--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -121,13 +121,13 @@
   "beehive.hives.plural": "蜂箱",
   "birdieplaza.birdieIntro": "嘿，我是 Birdie，这儿最美的乡包佬！",
   "birdieplaza.admiringOutfit": "我看你是在欣赏我的衣服。漂亮坏了，是吧？！？",
-  "birdieplaza.currentChapter": "我们目前正处于 {{currentSeason}} 季节，乡包佬们对 {{chapterTicket}} 疯狂不已。",
-  "birdieplaza.collectTickets": "收集足够的 {{chapterTicket}} 即可锻造稀有 NFT。这就是我获得这套稀有服装的方法！",
-  "birdieplaza.whatIsChapter": "什么是时季？",
+  "birdieplaza.currentSeason": "我们目前正处于 {{currentSeason}} 季节，乡包佬们对 {{seasonalTicket}} 疯狂不已。",
+  "birdieplaza.collectTickets": "收集足够的 {{seasonalTicket}} 即可锻造稀有 NFT。这就是我获得这套稀有服装的方法！",
+  "birdieplaza.whatIsSeason": "什么是时季？",
   "birdieplaza.howToEarnTickets": "我怎样赚取",
-  "birdieplaza.earnTicketsVariety": "您可以通过多种方式赚取 {{chapterTicket}}。",
-  "birdieplaza.gatherAndCraft": "收集足够的 {{chapterTicket}} 你就可以像我一样购买一些稀有物品。",
-  "birdieplaza.newChapterIntro": "Sunflower Land 每 3 个月会迎来一个新的时季。",
+  "birdieplaza.earnTicketsVariety": "您可以通过多种方式赚取 {{seasonalTicket}}。",
+  "birdieplaza.gatherAndCraft": "收集足够的 {{seasonalTicket}} 你就可以像我一样购买一些稀有物品。",
+  "birdieplaza.newSeasonIntro": "Sunflower Land 每 3 个月会迎来一个新的时季。",
   "description.speed.chicken.one": "你的鸡产蛋速度会加快 10%。",
   "description.banana.chicken": "一只能让香蕉增加产量的鸡。我们这世界可真奇妙。",
   "description.lab.grow.pumpkin": "+0.3 南瓜产量",
@@ -469,7 +469,7 @@
   "chores.chopTrees": "砍伐 3 颗树",
   "chores.helpWithTrees": "我这身老骨头已强健不再了，想来你可以搭把手把这些该砍的死鬼树砍了？我们这块的 Blacksmith 会帮你锻造好些工具的。",
   "chores.noChore": "抱歉，我暂时没有什么日常农活需要您做的。",
-  "chores.newChapter": "新时季就要来临，日常农活暂时停单。",
+  "chores.newSeason": "新时季就要来临，日常农活暂时停单。",
   "chores.choresFrozen": "新时季日常农活即将发单。先前时季的日常农活与进度会被重置。",
   "kingdomChores.preparing": "稍等一下。我还在准备发布农活。",
   "kingdomChores.completed": "看来你现在已经完成了所有农活了！晚点再来吧！",
@@ -531,7 +531,7 @@
   "confirmation.sell": "您确定要卖掉 {{amount}} {{name}} 以换取 {{coinAmount}} 枚硬币吗？",
   "confirmation.buyCrops": "您确定要花 {{coinAmount}} 枚硬币购买 {{seedNo}} {{seedName}}s 吗？",
   "confirmation.enterAmount": "请输入出售数量：",
-  "confirmation.sellChapterArtefact": "这悬赏的是一种时季古董！您确定您想卖出它吗？",
+  "confirmation.sellSeasonalArtefact": "这悬赏的是一种时季古董！您确定您想卖出它吗？",
   "confirmation.valuableTreasure": "这悬赏非常珍贵！您确定您想卖出它吗？",
   "confirm.skillClaim": "您确定要领取该技能吗？",
   "faction-intro.one": "欢迎来到您的新帮派堡楼……我们需要您的援助好变得更加强大并君临王城。",
@@ -1825,18 +1825,18 @@
   "rules.gameNotFinancialProduct": "这是一个游戏，不是一个金融产品。",
   "rules.noBots": "不允许机器人和脚本程序。",
   "rules.termsOfService": "服务条款",
-  "chapter.access": "你可以享受：",
-  "chapter.banner": "时季旗帜",
-  "chapter.bonusTickets": "完成交付后额外获得 2 张时季票券。",
-  "chapter.boostXP": "食物进食经验 +10%。",
-  "chapter.buyNow": "立刻购买",
-  "chapter.discount": "售价为 SFL 的时季商品可享受 25% 折扣。",
-  "chapter.exclusiveOffer": "独家特供！",
-  "chapter.goodLuck": "祝您这个时季好运！",
-  "chapter.includes": "包括：",
-  "chapter.limitedOffer": "限时特供！",
-  "chapter.wearableAirdrop": "免费时季穿戴品。",
-  "chapter.place.land": "您必须将旗帜放置在您的土地上",
+  "season.access": "你可以享受：",
+  "season.banner": "时季旗帜",
+  "season.bonusTickets": "完成交付后额外获得 2 张时季票券。",
+  "season.boostXP": "食物进食经验 +10%。",
+  "season.buyNow": "立刻购买",
+  "season.discount": "售价为 SFL 的时季商品可享受 25% 折扣。",
+  "season.exclusiveOffer": "独家特供！",
+  "season.goodLuck": "祝您这个时季好运！",
+  "season.includes": "包括：",
+  "season.limitedOffer": "限时特供！",
+  "season.wearableAirdrop": "免费时季穿戴品。",
+  "season.place.land": "您必须将旗帜放置在您的土地上",
   "share.ShareYourFarmLink": "分享您的农场链接",
   "share.ShowOffToFarmers": "分享您的农场链接来向农夫同志们炫耀。",
   "share.Tweet": "推文",
@@ -2219,7 +2219,7 @@
   "harvestflower.notReady": "花卉还未可供收成",
   "harvestflower.alr.plant": "花卉已经种下",
   "hayseedHankv2.dialog1": "嘿，哈喽喂，朝气高傲的年轻人！我是 Hayseed Hank，一位经验丰富的乡包佬老农，一如往日照料着这片土地。",
-  "hayseedHankv2.dialog2": "不过，我这老骨头却已不如往日了。如果你能帮我做些日常农活，我会奖励你 {{chapterTicket}}。",
+  "hayseedHankv2.dialog2": "不过，我这老骨头却已不如往日了。如果你能帮我做些日常农活，我会奖励你 {{seasonalTicket}}。",
   "hayseedHankv2.action": "让咱开始吧",
   "hayseedHankv2.title": "Hank 的日常农活",
   "hayseedHankv2.newChoresAvailable": "Hank 农活刷新：{{timeLeft}}",
@@ -2681,7 +2681,7 @@
   "npcDialogues.bert.intro2": "啊，同道之人！Sunflorea 埋藏着无数宝贝……",
   "npcDialogues.bert.intro3": "致敬，秘法卫士！在 Sunflorea ，有些物品需要递送……",
   "npcDialogues.bert.intro4": "你好，秘密的追索者！Sunflorea 的附魔可以分为两类……",
-  "bert.day": "在申领 {{chapterTicket}} 后的 3 天内，您都无法提取此物品。",
+  "bert.day": "在申领 {{seasonalTicket}} 后的 3 天内，您都无法提取此物品。",
   "npcDialogues.bert.positiveDelivery1": "不可思议！你给我带来了我需要的一切……",
   "npcDialogues.bert.positiveDelivery2": "哦，迷人的发现！你恰好给我带来了我想要的东西……",
   "npcDialogues.bert.positiveDelivery3": "啊，是时候了！你已经找到了我正好想要的物品。太棒了！",
@@ -2903,10 +2903,10 @@
   "plaza.magicButton.query": "广场上出现了一个神奇的按钮。你想按下吗？",
   "nyonStatue.memory": "谨此纪念",
   "nyonStatue.description": "负责从地雷间清除地精的传奇骑士。获胜后不久，他便死于哥布林阴谋家的毒害。向日葵公民用他的盔甲竖起了这座雕像，以纪念他的凯旋。",
-  "obsessionDialogue.line1": "啊，{{itemName}}！我只是想看到它，不想拥有。给我看，{{chapterTicket}} 就将是你的奖励。",
-  "obsessionDialogue.line2": "你带来 {{itemName}} 了吗？我只想盯它几眼。让我看看，{{chapterTicket}} 都归你的。",
-  "obsessionDialogue.line4": "{{itemName}}!我没想要它，只是想要看看。给我看，{{chapterTicket}} 就归你的。",
-  "obsessionDialogue.line5": "你能给我看 {{itemName}} ？我只想简单地看一看。作为您慷慨解囊的回报，我会给您发放 {{chapterTicket}} 。",
+  "obsessionDialogue.line1": "啊，{{itemName}}！我只是想看到它，不想拥有。给我看，{{seasonalTicket}} 就将是你的奖励。",
+  "obsessionDialogue.line2": "你带来 {{itemName}} 了吗？我只想盯它几眼。让我看看，{{seasonalTicket}} 都归你的。",
+  "obsessionDialogue.line4": "{{itemName}}!我没想要它，只是想要看看。给我看，{{seasonalTicket}} 就归你的。",
+  "obsessionDialogue.line5": "你能给我看 {{itemName}} ？我只想简单地看一看。作为您慷慨解囊的回报，我会给您发放 {{seasonalTicket}} 。",
   "offer.okxOffer": "哈喽喂，农夫，我有 OKX 独家优惠要给你！",
   "offer.beginWithNFT": "首先，你要铸造一个免费农场 NFT。这将包括：",
   "offer.getStarterPack": "立即获取新手包",
@@ -2936,8 +2936,8 @@
   "onCollectReward.Market": "去市场购买种子。",
   "onCollectReward.Missing.Shovel": "未找到铲子",
   "onCollectReward.Missing.Shovel.description": "拓张您的岛屿来找到它。",
-  "orderhelp.New.Chapter": "新时季即将来临，票券送货将暂时关闭。",
-  "orderhelp.New.Chapter.arrival": "时季送货即将开放……",
+  "orderhelp.New.Season": "新时季即将来临，票券送货将暂时关闭。",
+  "orderhelp.New.Season.arrival": "时季送货即将开放……",
   "orderhelp.Wisely": "谨慎选择！",
   "orderhelp.ticket.deliveries.closed": "票券送货目前已关闭",
   "pending.calcul": "正在计算结果。",
@@ -3021,18 +3021,18 @@
   "season.lifetime.farmer": "终身农民",
   "season.free.with.lifetime": "终身农民免费领取",
   "season.ticket.bonus": "+2 {{item}} s（送货和杂务）",
-  "chapter.codex.intro": "在此次限定时季里赚取 {{ticket}} ，为您的农场铸造限定收藏品和穿戴品……时不我待，赶快行动吧！",
-  "chapter.codex.howToEarn": "如何赚取 {{ticket}} ？",
-  "chapter.codex.howToEarn.one": "光顾广场，向乡包佬运送资源。",
-  "chapter.codex.nextDrop": "下一次空投",
-  "chapter.codex.chapterDrops": "时季空投",
-  "chapter.codex.chapterDrops.description": "与其他人争夺最稀有的物品！更多详情，请访问广场的拍卖行。",
-  "chapter.codex.soldOut": "已售罄",
-  "chapter.codex.mutants": "变异体",
-  "chapter.codex.mutants.discover": "探索时季变种体！",
-  "chapter.codex.mutants.one": "收集鸡蛋来发现 {{item}}。",
-  "chapter.codex.mutants.two": "在深海钓鱼以捕获 {{item}}。",
-  "chapter.codex.mutants.three": "尝试种花卉来发现 {{item}}。",
+  "season.codex.intro": "在此次限定时季里赚取 {{ticket}} ，为您的农场铸造限定收藏品和穿戴品……时不我待，赶快行动吧！",
+  "season.codex.howToEarn": "如何赚取 {{ticket}} ？",
+  "season.codex.howToEarn.one": "光顾广场，向乡包佬运送资源。",
+  "season.codex.nextDrop": "下一次空投",
+  "season.codex.seasonalDrops": "时季空投",
+  "season.codex.seasonalDrops.description": "与其他人争夺最稀有的物品！更多详情，请访问广场的拍卖行。",
+  "season.codex.soldOut": "已售罄",
+  "season.codex.mutants": "变异体",
+  "season.codex.mutants.discover": "探索时季变种体！",
+  "season.codex.mutants.one": "收集鸡蛋来发现 {{item}}。",
+  "season.codex.mutants.two": "在深海钓鱼以捕获 {{item}}。",
+  "season.codex.mutants.three": "尝试种花卉来发现 {{item}}。",
   "share.TweetText": "参观我的 Sunflower Land 农场",
   "share.FarmNFTImageAlt": "Sunflower-Land 农场 NFT 图片",
   "share.CopyFarmURL": "复制农场 URL",
@@ -3395,8 +3395,8 @@
   "description.faction.mark": "在帮派商城里使用",
   "description.vase": "远古时代的易碎品",
   "islandupgrade.warning": "确保您没有任何庄稼、水果、建筑、鸡、猩红宝石、鲜花或蜂蜜在生产中。这些资源节点将无法收获并将退回您的库存。日光石、房屋、市场、火坑和工作台将保留在您的土地上。",
-  "available.all.chapter": "全时季可用",
-  "megastore.message.allChapter": "以下是整个时季都可以购买的物品。一定要在时季结束前拿到手！",
+  "available.all.season": "全时季可用",
+  "megastore.message.allSeason": "以下是整个时季都可以购买的物品。一定要在时季结束前拿到手！",
   "monthly": "每月",
   "seasonal": "时季",
   "mega.collectibles": "超星收藏品",
@@ -3410,15 +3410,15 @@
   "scavenger.guide.one": "在 Sunflower Land 搜刮物品为发现隐藏的宝藏和锻造贵重物品提供了令人兴奋的机会。搜刮的第一个选项是在挖掘区挖宝，在那里你可以成为海盗寻宝者。通过冒险前往这个位于海滩北部的区域、在 Jafar 的商店锻造沙铲或沙钻，您可以在沙地挖掘以发现各种宝藏。",
   "scavenger.guide.two": "另一种选项的搜刮是收集野生和魔法蘑菇，这些蘑菇会自然出现在您的农场和周围的岛屿上。这些蘑菇可以被免费收集并用于食谱、任务和物品锻造。留意这些蘑菇，因为它们以不同的间隔补充。野生蘑菇每 16 小时刷新一次，您的农场最多只能生成 5 个野生蘑菇。在新手岛上，魔法蘑菇每 48 小时刷新一次，在春花岛上每 36 小时刷新一次，在沙漠岛上每隔 24 小时刷新一次，农场上最多可补充 3 个魔法蘑菇。如果您的土地已满，蘑菇就会出现在周围的岛屿上，确保您没有错过这些宝贵的资源。",
   "fruit.guide.two": "要种植水果，您需要获得更大的水果树坑，需要升级到春花岛后方可获取。",
-  "chapters.guide.one": "Sunflower Land 的时季为游戏带来了刺激和新鲜感，为玩家提供了新的挑战和机遇。在每个时季中，玩家都可以期待各种新的穿戴品和收藏品、时季变种体和稀有宝藏，从而创造出动态和不断变化的游戏体验。这鼓励玩家调整策略，在农场上探索新的可能性。此外，时季票券为游戏增添了策略玩法。玩家必须决定如何明智地分配门票，无论是收集稀有物品、选择装潢和装饰品，还是用票券兑换硬币。时季机制使游戏保持吸引力，并确保 Sunflower Land 总有值得期待的东西。",
+  "seasons.guide.one": "Sunflower Land 的时季为游戏带来了刺激和新鲜感，为玩家提供了新的挑战和机遇。在每个时季中，玩家都可以期待各种新的穿戴品和收藏品、时季变种体和稀有宝藏，从而创造出动态和不断变化的游戏体验。这鼓励玩家调整策略，在农场上探索新的可能性。此外，时季票券为游戏增添了策略玩法。玩家必须决定如何明智地分配门票，无论是收集稀有物品、选择装潢和装饰品，还是用票券兑换硬币。时季机制使游戏保持吸引力，并确保 Sunflower Land 总有值得期待的东西。",
   "keys": "钥匙",
   "seasonedFarmer.description": "收集 50 张时季票券",
   "crops.guide.two": "要种植庄稼，您需要从 Betty 的市场购买相应的种子。每种庄稼的生长时间不同，从向日葵的生长时间仅为 1 分钟到羽衣甘蓝的 36 小时不等。庄稼完全种植后，您可以收获它们并获得回报。",
   "cooking.guide.four": "食物准备好后，点击建筑物并将其移入库存中，将其从建筑物中取出。然后，您可以在农场的帐篷或房屋附近与你的乡包佬 NPC 互动，给他们喂准备好的食物，帮助他们获得经验值并在游戏中推进进度。",
   "deliveries.guide.two": "作为一名新玩家，您一开始会有些许订单，但是随着您的乡包佬等级提高，您将解锁额外的订单。这样，高级玩家可以完成更多订单。每隔 24 小时就会有新的订单，订单会要求食物、资源、花卉等的一系列请求。完成订单将为您赢得金币、SFL 或时季票券。",
   "deliveries.guide.three": "农民可以通过完成送货来增进与某些 NPC 的友谊。此外，向他们赠送花卉将进一步增进友谊。友谊栏满后，NPC 会奖励您一份礼物。密切关注 Codex，用各种订单挑战自我，根据需要升级和解锁新建筑，以满足更苛刻的请求。",
-  "chapters.guide.two": "Stella 的超星商店、拍卖行和 Jafar 商店的时季穿戴品和收藏品供应为 Sunflower Land 增添了又一层刺激感。玩家必须收集时季票券、宝藏和其他特定要求或在拍卖会上竞标才能铸造这些时季物品，从而培养竞争感和紧迫感。提前计划和制定策略变得至关重要，因为玩家的目标是在时间用完之前获得所需的物品。",
-  "chapters.guide.three": "Sunflower Land 通过每个时季的独特供应和对惊喜活动的期待，让玩家全年保持参与并乐在其中，创造一种充满活力又不断变化的农耕体验。",
+  "seasons.guide.two": "Stella 的超星商店、拍卖行和 Jafar 商店的时季穿戴品和收藏品供应为 Sunflower Land 增添了又一层刺激感。玩家必须收集时季票券、宝藏和其他特定要求或在拍卖会上竞标才能铸造这些时季物品，从而培养竞争感和紧迫感。提前计划和制定策略变得至关重要，因为玩家的目标是在时间用完之前获得所需的物品。",
+  "seasons.guide.three": "Sunflower Land 通过每个时季的独特供应和对惊喜活动的期待，让玩家全年保持参与并乐在其中，创造一种充满活力又不断变化的农耕体验。",
   "description.gift.giver.boost": "向玩家赠送礼物",
   "description.halo.boost": "访问管理工具",
   "keys.dailyLimit": "每日限额：{{keysAmountBoughtToday}} / 1",
@@ -3528,11 +3528,11 @@
   "gems.update": "宝石更新",
   "gems.intro": "为了准备引入新玩家，我们已经用一种新货币……宝石取代了 Block Bucks！",
   "gems.intro.two": "您每拥有一个 Block Bucks，都将获得 20 颗宝石。",
-  "birdieplaza.commonMethod": "赚取 {{chapterTicket}} 最常见方法是收集资源或收集其他所需物品，然后将其送货交付给广场和其他区域的乡包佬。",
-  "birdieplaza.chapterQuests": "本时季有激动人心的任务、稀有收藏品和独家穿戴品供您赚取。",
-  "birdieplaza.craftItems": "要获得这些稀有物品，您必须收集 {{chapterTicket}} 并在 Stella 的超星商店兑换或在拍卖行竞拍。",
+  "birdieplaza.commonMethod": "赚取 {{seasonalTicket}} 最常见方法是收集资源或收集其他所需物品，然后将其送货交付给广场和其他区域的乡包佬。",
+  "birdieplaza.seasonQuests": "本时季有激动人心的任务、稀有收藏品和独家穿戴品供您赚取。",
+  "birdieplaza.craftItems": "要获得这些稀有物品，您必须收集 {{seasonalTicket}} 并在 Stella 的超星商店兑换或在拍卖行竞拍。",
   "reward.streak.oneYear": "365 天连续奖励",
-  "chapter.codex.nextDrop.available": "{{dropSupply}} 可用",
+  "season.codex.nextDrop.available": "{{dropSupply}} 可用",
   "description.hoot.boost": "+0.5 小麦、萝卜、羽衣甘蓝、大米、大麦等高阶庄稼",
   "description.barley": "大麦是一种营养丰富的谷物，用于动物饲料。",
   "gems.speedUp": "加快速度",
@@ -3583,7 +3583,7 @@
   "description.chicken": "这只鸡是新鲜鸡蛋和柔软羽毛的可靠来源，只要小心谨慎，它就会愉快地发挥自己的作用。",
   "description.cow": "这头温柔的奶牛提供新鲜的牛奶和耐用的皮革。用充足的食物和抚慰让它开心。",
   "description.sheep": "这只毛茸茸的绵羊既提供普通羊毛，又提供奢华的美利奴羊毛。保持高兴，以获得最绵软的产出！",
-  "obsessionDialogue.line3": "你那是 {{itemName}} 吗？我只想看上一眼。看上了，我就给您 {{chapterTicket}} 。",
+  "obsessionDialogue.line3": "你那是 {{itemName}} 吗？我只想看上一眼。看上了，我就给您 {{seasonalTicket}} 。",
   "competition.maybeLater": "也许以后再说",
   "world.lvl.requirement": "等级 {{lvl}}",
   "world.factionMembersOnly": "仅限帮派成员",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "乡包佬们不看重黄色康乃馨。",
   "noBumpkin.bumpkinHelp": "您需要一个乡包佬来帮助您种植、收割、砍伐、开采和扩张土地。即将支持添加乡包佬功能！",
   "chores.weeklyChores": "时季农活",
-  "chores.completeChoresToEarn": "完成乡包佬们的农活即可获得 {{chapterTicket}}。",
+  "chores.completeChoresToEarn": "完成乡包佬们的农活即可获得 {{seasonalTicket}} 。",
   "chores.lockedChore": "等级 {{level}}",
   "chores.completed": "已经交付",
   "chores.complete": "进行交付",
@@ -4040,18 +4040,18 @@
   "description.free.range": "+0.1 动物产出",
   "description.chicken.coop": "可以用来养鸡的鸡舍。使用这种稀有鸡舍来增加产蛋量。",
   "description.gold.egg": "一个金蛋。里面所填之物，众所周知，承载着好运。",
-  "chapter.codex.howToEarn.two": "为乡包佬完成农活。（11月11日）",
-  "chapter.codex.howToEarn.three": "交易动物和花卉赏金！（11月11日）",
+  "season.codex.howToEarn.two": "为乡包佬完成农活。（11月11日）",
+  "season.codex.howToEarn.three": "交易动物和花卉赏金！（11月11日）",
   "description.cowboyHat.boost": "+1 马蹄铁",
   "description.cowboyShirt.boost": "+1 马蹄铁",
   "description.cowboyTrouser.boost": "+1 马蹄铁",
-  "chapter.codex.howToEarn.comingSoon": "从农活、送货和赏金中赚取马蹄铁！",
+  "season.codex.howToEarn.comingSoon": "从农活、送货和赏金中赚取马蹄铁！",
   "description.cropCircle": "您的农场里出现了一个神秘的圆阵……这会是意味着什么？",
   "description.omnifeed": "所有动物的最佳饲料。",
   "description.brush": "动物毛刷。用来表达对动物的爱意。",
   "description.music.box": "给动物播放音乐。用来表达对动物的爱意。",
   "levelUpMax": "最高等级！",
-  "birdieplaza.choresAndRewards": "您还可以通过每周农活、每日宝箱奖励、Bert 的奇妙痴玩和赏金系统获得 {{chapterTicket}} ！",
+  "birdieplaza.choresAndRewards": "您还可以通过每周农活、每日宝箱奖励、Bert 的奇妙痴玩和赏金系统获得 {{seasonalTicket}} ！",
   "description.community.coin": "(WIP) 一枚高价值的硬币，留待将来在 Sunflower Land 使用。",
   "bedsMigration.bedsNeededDescription2": "每张床都可以单独给一个雇农睡觉。",
   "bedsMigration.bedsNeededDescription3": "放置床位以雇用更多的雇农！",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "物品已售出",
   "marketplace.congratulationsItemSold": "恭喜，您的物品已售出！",
   "withdraw.taxFree": "哥布林会根据游戏中获得的 SFL 向你征税。这不包括存款和市场。",
-  "bounties.board.ticketAmount": "{{chapterTicket}} 的金额每周将根据请求而有所不同。",
+  "bounties.board.ticketAmount": "{{seasonalTicket}} 的金额每周将根据请求而有所不同。",
   "marketplace.listing.cancelling": "取消清单",
   "marketplace.listing.cancelling.success": "恭喜，您已成功取消挂单！",
   "marketplace.listing.cancelling.failure": "哎呀，出了点问题。请重试。",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "剩余每日购单数：{{purchasesRemaining}}",
   "remaining.free.purchase": "剩余每日购单数：1",
   "statements.potionRule.four": "游戏完成后，你最后一次尝试的分数将决定你的奖励。",
-  "obsessionDialogue.codex": "那是你的 {{itemName}} 吗？前往广场找到 Bert 并将其展示给他，他会给你 {{chapterTicket}} 作为回报。",
+  "obsessionDialogue.codex": "那是你的 {{itemName}} 吗？前往广场找到 Bert 并将其展示给他，他会给你 {{seasonalTicket}} 作为回报。",
   "bounties.board.travel": "前往广场找到 Poppy 来兑现这些赏金",
   "description.trade.points": "通过在市场上交易收藏品和可穿戴设备获得。可以兑换游戏内奖励。",
   "reward.collectible": "为您农场准备的收藏品",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "解锁出售",
   "marketplace.unlockOffering": "解锁报价",
   "marketplace.vip.access": "无限制的市场功能权限",
-  "marketplace.vip.chapter.access": "时季期间无限制的市场功能权限",
+  "marketplace.vip.season.access": "时季期间无限制的市场功能权限",
   "marketplace.welcome.one": "你好，伙伴！欢迎来到市场。您可一站式购买所有农场美味佳品。",
   "marketplace.welcome.two": "在这里，您可以交易资源，购买独家收藏品并扩大您的农场。",
   "marketplace.welcome.three": "该市场仅使用向日葵乐园的货币 $SFL。你可以在游戏中赚取$SFL，也可以与其他玩家进行交易。",
