--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -123,13 +123,13 @@
   "beehive.hives.plural": "じんましん",
   "birdieplaza.birdieIntro": "こんにちは、私はバーディー、周りで一番美しいバンプキンです！",
   "birdieplaza.admiringOutfit": "あなたが私の服を賞賛しているのに気づきました。素晴らしくない？！？",
-  "birdieplaza.currentChapter": "現在 {{currentSeason}} シーズンに入っており、バンプキンズは {{chapterTicket}} に夢中になっています。",
-  "birdieplaza.collectTickets": "十分な {{chapterTicket}} を集めると、レアなNFTを作成できます。そんなわけで、このレアな衣装を手に入れました！",
-  "birdieplaza.whatIsChapter": "シーズンとは？",
-  "birdieplaza.howToEarnTickets": "{{chapterTicket}} s?",
-  "birdieplaza.earnTicketsVariety": "さまざまな方法で {{chapterTicket}} を獲得できます。",
-  "birdieplaza.gatherAndCraft": "{{chapterTicket}} をたくさん集めれば、私のようにレアなアイテムを購入できるようになります。",
-  "birdieplaza.newChapterIntro": "サンフラワーランドでは、3か月ごとに新しいシーズンが始まります。",
+  "birdieplaza.currentSeason": "現在 {{currentSeason}} シーズンに入っており、バンプキンズは {{seasonalTicket}} に夢中になっています。",
+  "birdieplaza.collectTickets": "十分な {{seasonalTicket}} を集めると、レアなNFTを作成できます。そんなわけで、このレアな衣装を手に入れました！",
+  "birdieplaza.whatIsSeason": "シーズンとは？",
+  "birdieplaza.howToEarnTickets": "{{seasonalTicket}} s?",
+  "birdieplaza.earnTicketsVariety": "さまざまな方法で {{seasonalTicket}} を獲得できます。",
+  "birdieplaza.gatherAndCraft": "{{seasonalTicket}} をたくさん集めれば、私のようにレアなアイテムを購入できるようになります。",
+  "birdieplaza.newSeasonIntro": "サンフラワーランドでは、3か月ごとに新しいシーズンが始まります。",
   "description.speed.chicken.one": "鶏の卵生産が 10% 速くなりました。",
   "description.banana.chicken": "バナナを美味しくするチキン。私たちはなんて素晴らしい世界に住んでいるのでしょう。",
   "description.pharaoh.chicken": "ルーリングチキン、+1ディグ",
@@ -496,7 +496,7 @@
   "chores.chopTrees": "木を3本切る",
   "chores.helpWithTrees": "俺の古い骨は昔とは違う。切り刻む必要のあるこの木に手を貸してくれないか？地元の鍛冶屋が道具の製作を手伝ってくれます。",
   "chores.noChore": "ごめん、今やるべき仕事がないんだ。",
-  "chores.newChapter": "新しいシーズンが近づくと、雑用は一時的に終了します。",
+  "chores.newSeason": "新しいシーズンが近づくと、雑用は一時的に終了します。",
   "chores.choresFrozen": "新しい季節の雑用が間もなく利用可能になります。",
   "kingdomChores.preparing": "ちょっと待って家事の準備をしているところです。",
   "kingdomChores.completed": "今のところ家事は全部終わったようですね。すぐに戻ってきて！",
@@ -558,7 +558,7 @@
   "confirmation.sell": "本当に {{amount}} {{name}} を {{coinAmount}} コインで売ってもよろしいですか？",
   "confirmation.buyCrops": "本当に {{coinAmount}} コインを使って {{seedNo}} {{seedName}} sを購入してもよろしいですか？",
   "confirmation.enterAmount": "売却金額を入力:",
-  "confirmation.sellChapterArtefact": "この賞金は季節のアーティファクトです！本当に売りたいの？",
+  "confirmation.sellSeasonalArtefact": "この賞金は季節のアーティファクトです！本当に売りたいの？",
   "confirmation.valuableTreasure": "この賞金はとても貴重です！本当に売りたいの？",
   "confirm.skillClaim": "本当にスキルを申請してもよろしいですか？",
   "faction-intro.one": "新しいファクションハウスへようこそ...より強力になり、王国を支配するためにはあなたの助けが必要です。",
@@ -1929,9 +1929,9 @@
   "fruit.guide.one": "フルーツは、サンフラワーランドでコインとして売ったり、さまざまなレシピやクラフトに利用したりできる貴重な資源として重要な役割を果たしています。農作物とは異なり、フルーツパッチは収穫のたびに何度も補充できるユニークな機能を備えているため、プレイヤーにとって持続可能なフルーツの供給源となります。",
   "fruit.guide.two": "果物を植えるには、ペタルパラダイスにアップグレードすると入手可能になる大きなフルーツパッチを入手する必要があります。",
   "fruit.guide.three": "果物を栽培して農業戦略に取り入れることで、利益を最大化し、おいしいレシピを作成し、ひまわりランドの新しい可能性を開拓することができます。",
-  "chapters.guide.one": "サンフラワーランドのシーズンは、ゲームに興奮と新鮮さをもたらし、プレイヤーに新たな挑戦と機会をもたらします。シーズンごとに、プレイヤーはさまざまな新しいウェアラブルや収集品、季節のミュータント、珍しい宝物を楽しみにすることができ、ダイナミックで進化するゲームプレイ体験を生み出します。これにより、プレイヤーは戦略を適応させ、農場で新しい可能性を探求するようになります。さらに、季節限定チケットはゲームに戦略的な要素を追加します。プレイヤーは、レアアイテムの収集、装飾品や装飾品の選択、チケットのコインへの交換など、チケットを賢く配分する方法を決めなければなりません。シーズンメカニックはゲームを飽きさせず、ひまわりランドには常に何か楽しみがあるようにしています。",
-  "chapters.guide.two": "Stella's Mega Store、オークションハウス、Jafar's Shopで季節限定のウェアラブルや収集品が手に入ることは、サンフラワーランドをさらに盛り上げています。プレイヤーはシーズンチケットや宝物、その他の特定の条件を集めてシーズンアイテムを作ったり、オークションで入札したりして、競争心と切迫感を醸成する必要があります。時間がなくなる前に欲しいアイテムを手に入れることを目指すプレイヤーにとって、事前の計画と戦略が重要になります。",
-  "chapters.guide.three": "サンフラワーランドでは、シーズンごとにユニークな商品やサプライズイベントが予定されており、年間を通じてプレイヤーの関心と楽しさを維持し、活気に満ちた進化し続ける農業体験を生み出しています。",
+  "seasons.guide.one": "サンフラワーランドのシーズンは、ゲームに興奮と新鮮さをもたらし、プレイヤーに新たな挑戦と機会をもたらします。シーズンごとに、プレイヤーはさまざまな新しいウェアラブルや収集品、季節のミュータント、珍しい宝物を楽しみにすることができ、ダイナミックで進化するゲームプレイ体験を生み出します。これにより、プレイヤーは戦略を適応させ、農場で新しい可能性を探求するようになります。さらに、季節限定チケットはゲームに戦略的な要素を追加します。プレイヤーは、レアアイテムの収集、装飾品や装飾品の選択、チケットのコインへの交換など、チケットを賢く配分する方法を決めなければなりません。シーズンメカニックはゲームを飽きさせず、ひまわりランドには常に何か楽しみがあるようにしています。",
+  "seasons.guide.two": "Stella's Mega Store、オークションハウス、Jafar's Shopで季節限定のウェアラブルや収集品が手に入ることは、サンフラワーランドをさらに盛り上げています。プレイヤーはシーズンチケットや宝物、その他の特定の条件を集めてシーズンアイテムを作ったり、オークションで入札したりして、競争心と切迫感を醸成する必要があります。時間がなくなる前に欲しいアイテムを手に入れることを目指すプレイヤーにとって、事前の計画と戦略が重要になります。",
+  "seasons.guide.three": "サンフラワーランドでは、シーズンごとにユニークな商品やサプライズイベントが予定されており、年間を通じてプレイヤーの関心と楽しさを維持し、活気に満ちた進化し続ける農業体験を生み出しています。",
   "pete.teaser.one": "木を切り刻む",
   "pete.teaser.three": "ひまわりを収穫する",
   "pete.teaser.four": "ひまわりを売ろう",
@@ -1946,7 +1946,7 @@
   "harvestflower.notReady": "花は収穫の準備ができていません",
   "harvestflower.alr.plant": "花はすでに植えられています",
   "hayseedHankv2.dialog1": "やあ、やあ、若いウィッパースナッパーズ！私はヘイシード・ハンクです。昔ながらのバンプキン農家のベテランで、古き良き時代のように土地の世話をしています。",
-  "hayseedHankv2.dialog2": "しかし、私の骨は昔のようにはいきません。日頃の雑用を手伝ってもらえたら、{{chapterTicket}} で報酬をあげます。",
+  "hayseedHankv2.dialog2": "しかし、私の骨は昔のようにはいきません。日頃の雑用を手伝ってもらえたら、{{seasonalTicket}} で報酬をあげます。",
   "hayseedHankv2.action": "やってみよう",
   "hayseedHankv2.title": "ハンクの日常雑用",
   "hayseedHankv2.newChoresAvailable": "新しい雑用:{{timeLeft}}",
@@ -2520,7 +2520,7 @@
   "npcDialogues.bert.intro2": "ああ、気の合う精神！サンフロリアには数え切れないほどの宝物があります...",
   "npcDialogues.bert.intro3": "ミステリアスの担い手、ご挨拶！サンフロリアでは、一部の商品は配送が必要です...",
   "npcDialogues.bert.intro4": "こんにちは、隠されたものを求める人！サンフロレアのエンチャントは2つに分類できます...",
-  "bert.day": "{{chapterTicket}} を申請してから3日間は、このアイテムを出金できません。",
+  "bert.day": "{{seasonalTicket}} を申請してから3日間は、このアイテムを出金できません。",
   "npcDialogues.bert.positiveDelivery1": "信じられない！あなたは私に必要なものをすべて持ってきてくれました...",
   "npcDialogues.bert.positiveDelivery2": "ああ、魅力的な発見！探していたアイテムとまったく同じものを持ってきてくれたね...",
   "npcDialogues.bert.positiveDelivery3": "ああ、そろそろ時間だ！私が探していたアイテムとまったく同じものを手に入れました。素晴らしい！",
@@ -2742,10 +2742,10 @@
   "plaza.magicButton.query": "広場に魔法のボタンが現れました。押したいかい？",
   "nyonStatue.memory": "を記念して",
   "nyonStatue.description": "地雷からゴブリンを一掃した伝説の騎士。勝利して間もなく、彼はゴブリンの共謀者に毒殺されて死亡した。ヒマワリの市民たちは、彼の征服を記念して、彼の鎧を使ってこの像を建てました。",
-  "obsessionDialogue.line1": "ああ、{{itemName}}！私はそれを見たいだけで、所有したいわけではない。私に見せてください。そうすれば {{chapterTicket}} sが報酬になります。",
-  "obsessionDialogue.line2": "{{itemName}} を持ってきましたか？ただじっと見つめたいだけです。見せて、{{chapterTicket}} は君のものだ。",
-  "obsessionDialogue.line4": "ザ・{{itemName}}!見守るためだけに持っておきたくない。私に見せてください。{{chapterTicket}} はあなたのものです。",
-  "obsessionDialogue.line5": "{{itemName}} の景色が見えますか？私がお願いするのは、簡単に見てみることだけです。あなたのご厚意により、{{chapterTicket}} が授与されます。",
+  "obsessionDialogue.line1": "ああ、{{itemName}}！私はそれを見たいだけで、所有したいわけではない。私に見せてください。そうすれば {{seasonalTicket}} sが報酬になります。",
+  "obsessionDialogue.line2": "{{itemName}} を持ってきましたか？ただじっと見つめたいだけです。見せて、{{seasonalTicket}} は君のものだ。",
+  "obsessionDialogue.line4": "ザ・{{itemName}}!見守るためだけに持っておきたくない。私に見せてください。{{seasonalTicket}} はあなたのものです。",
+  "obsessionDialogue.line5": "{{itemName}} の景色が見えますか？私がお願いするのは、簡単に見てみることだけです。あなたのご厚意により、{{seasonalTicket}} が授与されます。",
   "offer.okxOffer": "ハウディファーマー、OKX限定のオファーがあります！",
   "offer.beginWithNFT": "まず、無料のファームNFTをミントする必要があります。これには以下が含まれます。",
   "offer.getStarterPack": "スターターパックを今すぐ入手",
@@ -2776,8 +2776,8 @@
   "onCollectReward.Missing.Shovel": "ショベルが見つからない",
   "onCollectReward.Missing.Shovel.description": "島を広げて見つけましょう。",
   "orderhelp.Skip.hour": "注文をスキップできるのは24時間後です！",
-  "orderhelp.New.Chapter": "新しいシーズンが近づくと、チケットの配達は一時的に終了します。",
-  "orderhelp.New.Chapter.arrival": "季節限定配送が間もなく始まります...",
+  "orderhelp.New.Season": "新しいシーズンが近づくと、チケットの配達は一時的に終了します。",
+  "orderhelp.New.Season.arrival": "季節限定配送が間もなく始まります...",
   "orderhelp.Wisely": "賢く選んでください！",
   "orderhelp.SkipIn": "スキップイン",
   "orderhelp.NoRight": "今はだめだ",
@@ -2902,18 +2902,18 @@
   "rules.noBots": "ボッティングや自動化なし",
   "rules.termsOfService": "サービス規約",
   "sceneDialogues.chefIsBusy": "シェフは忙しい",
-  "chapter.access": "以下にアクセスできます。",
-  "chapter.banner": "季節限定バナー",
-  "chapter.bonusTickets": "季節限定ボーナスチケット",
-  "chapter.boostXP": "料理から得られる経験値 +10%",
-  "chapter.buyNow": "今すぐ購入",
-  "chapter.discount": "季節商品のSFL割引 25%",
-  "chapter.exclusiveOffer": "限定オファー！",
-  "chapter.goodLuck": "今シーズン頑張ってください！",
-  "chapter.includes": "含まれるもの:",
-  "chapter.limitedOffer": "期間限定！",
-  "chapter.wearableAirdrop": "季節限定のウェアラブルエアドロップ",
-  "chapter.place.land": "自分の土地に置かなければなりません。",
+  "season.access": "以下にアクセスできます。",
+  "season.banner": "季節限定バナー",
+  "season.bonusTickets": "季節限定ボーナスチケット",
+  "season.boostXP": "料理から得られる経験値 +10%",
+  "season.buyNow": "今すぐ購入",
+  "season.discount": "季節商品のSFL割引 25%",
+  "season.exclusiveOffer": "限定オファー！",
+  "season.goodLuck": "今シーズン頑張ってください！",
+  "season.includes": "含まれるもの:",
+  "season.limitedOffer": "期間限定！",
+  "season.wearableAirdrop": "季節限定のウェアラブルエアドロップ",
+  "season.place.land": "自分の土地に置かなければなりません。",
   "season.megastore.discount": "メガストアSFL割引",
   "season.supporter.gift": "サポーターギフト",
   "season.free.season.passes": "フリーシーズンバナー",
@@ -2926,18 +2926,18 @@
   "season.lifetime.farmer": "ライフタイム・ファーマー",
   "season.free.with.lifetime": "ライフタイムファーマーで無料",
   "season.ticket.bonus": "+ {{item}} (配送と雑用)",
-  "chapter.codex.intro": "この限定シーズンに {{ticket}} を獲得して、農場限定の収集品やウェアラブルを作ってください... 時間がなくなる前に急いでください！",
-  "chapter.codex.howToEarn": "{{ticket}} sを稼ぐにはどうすればいいですか？",
-  "chapter.codex.howToEarn.one": "広場を訪れ、バンプキンズに資源を届けてください。",
-  "chapter.codex.nextDrop": "ネクストドロップ",
-  "chapter.codex.chapterDrops": "シーズンドロップ",
-  "chapter.codex.chapterDrops.description": "他の人と競い合って、最も希少なアイテムを手に入れましょう！詳細については、広場の競売人を訪ねてください。",
-  "chapter.codex.soldOut": "売り切れ",
-  "chapter.codex.mutants": "ミュータント",
-  "chapter.codex.mutants.discover": "季節のミュータントを発見しよう！",
-  "chapter.codex.mutants.one": "卵を集めて {{item}} を見つけましょう。",
-  "chapter.codex.mutants.two": "{{item}} を求めて深海で魚を釣ってください。",
-  "chapter.codex.mutants.three": "花を試して {{item}} を見つけてください。",
+  "season.codex.intro": "この限定シーズンに {{ticket}} を獲得して、農場限定の収集品やウェアラブルを作ってください... 時間がなくなる前に急いでください！",
+  "season.codex.howToEarn": "{{ticket}} sを稼ぐにはどうすればいいですか？",
+  "season.codex.howToEarn.one": "広場を訪れ、バンプキンズに資源を届けてください。",
+  "season.codex.nextDrop": "ネクストドロップ",
+  "season.codex.seasonalDrops": "シーズンドロップ",
+  "season.codex.seasonalDrops.description": "他の人と競い合って、最も希少なアイテムを手に入れましょう！詳細については、広場の競売人を訪ねてください。",
+  "season.codex.soldOut": "売り切れ",
+  "season.codex.mutants": "ミュータント",
+  "season.codex.mutants.discover": "季節のミュータントを発見しよう！",
+  "season.codex.mutants.one": "卵を集めて {{item}} を見つけましょう。",
+  "season.codex.mutants.two": "{{item}} を求めて深海で魚を釣ってください。",
+  "season.codex.mutants.three": "花を試して {{item}} を見つけてください。",
   "share.TweetText": "マイ・サンフラワー・ランド・ファームを訪ねる",
   "share.ShareYourFarmLink": "ファームリンクを共有",
   "share.ShowOffToFarmers": "農場のリンクを共有して、他の農家に見せびらかしましょう",
@@ -3426,8 +3426,8 @@
   "description.gold.beetle.boost": "+0.1 ゴールド",
   "description.stone.beetle.boost": "+0.1 ストーン",
   "description.iron.beetle.boost": "+0.1 アイアン",
-  "available.all.chapter": "オールシーズン利用可能",
-  "megastore.message.allChapter": "シーズンを通して購入できるアイテムをご紹介します。シーズンが終わる前に必ず手に入れてください。",
+  "available.all.season": "オールシーズン利用可能",
+  "megastore.message.allSeason": "シーズンを通して購入できるアイテムをご紹介します。シーズンが終わる前に必ず手に入れてください。",
   "monthly": "毎月",
   "seasonal": "季節限定",
   "mega.collectibles": "メガコレクティブル",
@@ -3528,11 +3528,11 @@
   "gems.update": "Gem アップデート",
   "gems.intro": "新規プレイヤーのオンボーディングに備えて、Block Bucksを新しい通貨「ジェム」に置き換えました！",
   "gems.intro.two": "所有しているブロックバックごとに20ジェムを受け取ります。",
-  "birdieplaza.commonMethod": "{{chapterTicket}} を獲得する最も一般的な方法は、資源を集めるか、他のリクエストされたアイテムを集めて、プラザや他のエリアのバンプキンに届けることです。",
-  "birdieplaza.chapterQuests": "今シーズンには、エキサイティングなクエスト、レアな収集品、限定ウェアラブルが手に入ります。",
-  "birdieplaza.craftItems": "これらのレアアイテムを入手するには、{{chapterTicket}} を集めてステラのメガストアで交換するか、オークションハウスで入札する必要があります。",
+  "birdieplaza.commonMethod": "{{seasonalTicket}} を獲得する最も一般的な方法は、資源を集めるか、他のリクエストされたアイテムを集めて、プラザや他のエリアのバンプキンに届けることです。",
+  "birdieplaza.seasonQuests": "今シーズンには、エキサイティングなクエスト、レアな収集品、限定ウェアラブルが手に入ります。",
+  "birdieplaza.craftItems": "これらのレアアイテムを入手するには、{{seasonalTicket}} を集めてステラのメガストアで交換するか、オークションハウスで入札する必要があります。",
   "reward.streak.oneYear": "365 日連続リワード",
-  "chapter.codex.nextDrop.available": "{{dropSupply}} ご利用可能",
+  "season.codex.nextDrop.available": "{{dropSupply}} ご利用可能",
   "description.hoot.boost": "+0.5 小麦、大根、ケール、米、大麦",
   "description.barley": "大麦は動物飼料に使用される栄養価の高い穀物です。",
   "gems.speedUp": "スピードアップ",
@@ -3583,7 +3583,7 @@
   "description.chicken": "新鮮な卵と柔らかい羽毛の信頼できる供給源であるこの鶏肉は、適切な手入れをすれば喜んでその役割を果たします。",
   "description.cow": "この優しい牛は、新鮮なミルクと丈夫な革を使用しています。たっぷりの食べ物と愛情を込めて幸せに保ちましょう。",
   "description.sheep": "このふわふわの羊は、通常のウールと高級なメリノウールの両方を備えています。最高にソフトな仕上がりになるのでハッピーな状態を保ちましょう。",
-  "obsessionDialogue.line3": "それはあなたが持っている {{itemName}} ですか？一目見ただけでいいんだよ。これにより、{{chapterTicket}} が届きます。",
+  "obsessionDialogue.line3": "それはあなたが持っている {{itemName}} ですか？一目見ただけでいいんだよ。これにより、{{seasonalTicket}} が届きます。",
   "competition.maybeLater": "たぶん後で",
   "world.lvl.requirement": "レベル {{lvl}}",
   "world.factionMembersOnly": "ファクションメンバーのみ",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "バンプキンは黄色いカーネーションを大切にしません。",
   "noBumpkin.bumpkinHelp": "土地を植えたり、収穫したり、切り刻んだり、掘ったり、土地を広げたりするには、バンプキンが必要です。バンプキンを追加するためのサポートが間もなく開始されます！",
   "chores.weeklyChores": "ウィークリー雑用",
-  "chores.completeChoresToEarn": "バンプキンズの雑用を完了して {{chapterTicket}} を稼ぎましょう。",
+  "chores.completeChoresToEarn": "バンプキンズの雑用を完了して {{seasonalTicket}} を稼ぎましょう。",
   "chores.lockedChore": "レベル {{level}}",
   "chores.completed": "完了しました",
   "chores.complete": "完了",
@@ -4040,18 +4040,18 @@
   "description.free.range": "+0.1 アニマル・プロデュース",
   "description.chicken.coop": "鶏の飼育に使用できる鶏小屋。この珍しい小屋で産卵量を増やしましょう。",
   "description.gold.egg": "黄金の卵。中に入っているものは幸運の持ち主として知られています。",
-  "chapter.codex.howToEarn.two": "バンプキンズの雑用を全部やりましょう。(11 月 11 日)",
-  "chapter.codex.howToEarn.three": "動物や花の賞金を交換しよう！(11月11日)",
+  "season.codex.howToEarn.two": "バンプキンズの雑用を全部やりましょう。(11 月 11 日)",
+  "season.codex.howToEarn.three": "動物や花の賞金を交換しよう！(11月11日)",
   "description.cowboyHat.boost": "+1 ホースシュー",
   "description.cowboyShirt.boost": "+1 ホースシュー",
   "description.cowboyTrouser.boost": "+1 ホースシュー",
-  "chapter.codex.howToEarn.comingSoon": "家事、配達、賞金で馬蹄形を稼ごう！",
+  "season.codex.howToEarn.comingSoon": "家事、配達、賞金で馬蹄形を稼ごう！",
   "description.cropCircle": "農場に現れる不思議なサークル... どういう意味？",
   "description.omnifeed": "すべての動物に最適な飼料として機能します。",
   "description.brush": "アニマルブラシ。これを使って動物への愛情を示しましょう。",
   "description.music.box": "動物に音楽をかけます。これを使って動物への愛情を示しましょう。",
   "levelUpMax": "最大レベル！",
-  "birdieplaza.choresAndRewards": "また、毎週の雑用、毎日のチェスト報酬、バートのオッドオブセッション、バウンティシステムによって {{chapterTicket}} を獲得することもできます！",
+  "birdieplaza.choresAndRewards": "また、毎週の雑用、毎日のチェスト報酬、バートのオッドオブセッション、バウンティシステムによって {{seasonalTicket}} を獲得することもできます！",
   "description.community.coin": "(WIP) 将来サンフラワーランドで使えるように予約されている貴重なコイン。",
   "bedsMigration.bedsNeededDescription2": "それぞれの個性的なベッドで片手でも眠れます。",
   "bedsMigration.bedsNeededDescription3": "ベッドを置いて農夫をもっと雇おう！",
@@ -4186,7 +4186,7 @@
   "marketplace.itemSold": "商品が販売されました",
   "marketplace.congratulationsItemSold": "おめでとうございます。商品は売れました。",
   "withdraw.taxFree": "ゴブリンはゲーム内で獲得したSFLに課税します。これにはデポジットとマーケットプレイスは含まれません。",
-  "bounties.board.ticketAmount": "{{chapterTicket}} の金額は、リクエストに応じて毎週異なります。",
+  "bounties.board.ticketAmount": "{{seasonalTicket}} の金額は、リクエストに応じて毎週異なります。",
   "marketplace.listing.cancelling": "出品をキャンセルする",
   "marketplace.listing.cancelling.success": "おめでとうございます。出品は正常にキャンセルされました。",
   "marketplace.listing.cancelling.failure": "おっと、何かがおかしくなりました。もう一度試してください。",
@@ -4317,7 +4317,7 @@
   "remaining.free.purchases": "{{purchasesRemaining}} 日次購入残高",
   "remaining.free.purchase": "1 日の購入が残り",
   "statements.potionRule.four": "ゲームが完了すると、最後のトライのスコアによって報酬が決まります。",
-  "obsessionDialogue.codex": "それはあなたが持っている {{itemName}} ですか？広場に行ってバートを探し、彼に見せてください。そうすれば、バートはお返しに {{chapterTicket}} をくれます。",
+  "obsessionDialogue.codex": "それはあなたが持っている {{itemName}} ですか？広場に行ってバートを探し、彼に見せてください。そうすれば、バートはお返しに {{seasonalTicket}} をくれます。",
   "bounties.board.travel": "広場に行き、ポピーを見つけてこれらの賞金を稼ぎましょう",
   "description.trade.points": "マーケットプレイスで収集品やウェアラブルを取引することで獲得できます。ゲーム内の報酬と交換できます。",
   "reward.collectible": "農場用の収集品",
@@ -4352,7 +4352,7 @@
   "marketplace.unlockSelling": "販売のロックを解除",
   "marketplace.unlockOffering": "オファーのロック解除",
   "marketplace.vip.access": "無制限のマーケットプレイスアクセス",
-  "marketplace.vip.chapter.access": "シーズン中はマーケットプレイスに無制限にアクセス可能",
+  "marketplace.vip.season.access": "シーズン中はマーケットプレイスに無制限にアクセス可能",
   "marketplace.welcome.one": "やあ、相棒！マーケットプレイスへようこそ。農場の美味しいものをすべて揃えたワンストップショップ。",
   "marketplace.welcome.two": "ここでは、資源を交換したり、限定グッズを購入したり、農場を強化したりできます。",
   "marketplace.welcome.three": "マーケットプレイスでは、サンフラワーランドの通貨である$SFLのみを使用しています。$SFLはゲーム内で獲得することも、他のプレイヤーと取引することもできます。",
