Clarify Seasonal Crop Boost Description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4669,10 +4669,10 @@
   "description.goldenSheep.boost": "Feed Sheeps for free!",
   "description.barnBlueprint.boost": "+5 Barn Animals",
   "description.solAndLuna.boost": "+50% Crafting Speed",
-  "description.blossomWard.boost": "+1 Spring Crop Yield",
-  "description.solflareAegis.boost": "-50% Summer Crop Growth Time",
-  "description.autumnsEmbrace.boost": "-50% Autumn Crop Growth Time",
-  "description.frozenHeart.boost": "+1 Winter Crop Yield",
+  "description.blossomWard.boost": "+1 Crop Yield during Spring",
+  "description.solflareAegis.boost": "-50% Crop Growth Time during Summer",
+  "description.autumnsEmbrace.boost": "-50% Crop Growth Time during Autumn",
+  "description.frozenHeart.boost": "+1 Crop Yield during Winter",
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
