Refine Seasonal Crop Boost Descriptions

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4668,11 +4668,11 @@
   "description.chamomile": "A decorative mutant flower found during the Winds of Change chapter.",
   "description.goldenSheep.boost": "Feed Sheeps for free!",
   "description.barnBlueprint.boost": "+5 Barn Animals",
-  "description.solAndLuna.boost": "+50% Crafting Speed",
-  "description.blossomWard.boost": "+1 Crop Yield during Spring",
-  "description.solflareAegis.boost": "-50% Crop Growth Time during Summer",
-  "description.autumnsEmbrace.boost": "-50% Crop Growth Time during Autumn",
-  "description.frozenHeart.boost": "+1 Crop Yield during Winter",
+  "description.solAndLuna.boost": "2x Crafting Speed",
+  "description.blossomWard.boost": "+1 Plot Crop Yield in Spring",
+  "description.solflareAegis.boost": "-50% Plot Crop Time in Summer",
+  "description.autumnsEmbrace.boost": "-50% Plot Crop Time in Autumn",
+  "description.frozenHeart.boost": "+1 Plot Crop Yield in Winter",
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
