--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5170,5 +5170,8 @@
   "gorga.intro.two": "I heard your kind has found some Obsidian. Is that true?",
   "gorga.intro.three": "I tell you what, if you can find me some Obsidian, I'll exchange it for Sunstone.",
   "chapter": "Chapter",
-  "time.left": "left"
+  "time.left": "left",
+  "competition.ended": "Competition has ended",
+  "competition.ended.description": "The competition has ended. Thank you for participating!",
+  "competition.ended.description.two": "The winners are being calculated and will be announced soon."
 }
