--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5173,5 +5173,5 @@
   "time.left": "left",
   "competition.ended": "Competition has ended",
   "competition.ended.description": "The competition has ended. Thank you for participating!",
-  "competition.ended.description.two": "The winners are being calculated and will be announced soon."
+  "competition.ended.description.two": "The winners are being calculated and will be announced on February 7th!"
 }
