--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5180,6 +5180,8 @@
   "gorga.intro.three": "I tell you what, if you can find me some Obsidian, I'll exchange it for Sunstone.",
   "chapter": "Chapter",
   "time.left": "left",
+  "beds": "Beds",
+  "weatherItems": "Weather Items",
   "competition.ended": "Competition has ended",
   "competition.ended.description": "The competition has ended. Thank you for participating!",
   "competition.ended.description.two": "The winners are being calculated and will be announced on February 7th!",
