[CHORE] Update Weather Shop Description

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5166,7 +5166,7 @@
   "solarForge.intro.forge": "I've been working on a new type of forge that can help you craft resources with the power of the sun.",
   "solarForge.intro.forgeStrength": "The strength of the forge is limited, each time you use it will require more Sunstones!",
   "season.possibleEvents": "Possible Events",
-  "temperateSeason.possibleEventsDescription": "Visit the weather shop to protect your farm!",
+  "temperateSeason.possibleEventsDescription": "Visit the weather shop in the plaza to protect your farm!",
   "season.weatherShop": "Weather Shop",
   "season.weatherShopDescription": "Buy items to protect your farm from the weather",
   "season.watchOutForSpecialEvents": "Watch out for special events during each season!",
