Correction of typos

--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -1221,7 +1221,7 @@
   "description.cowboyTrouser.boost": "+1 Подковы",
   "description.cozyFireplace": "Теплый и уютный камин, который создает идеальный фон для праздничных встреч.",
   "description.crab": "Краб, остерегайся его клешней!",
-  "description.crabHat.boost": "+1 награда за рыбалку",
+  "description.crabHat.boost": "+1 сокровища при рыбалке",
   "description.craftingBox": "Верстак для изготовления различных предметов.",
   "description.crim.peckster": "Детектив, который обладает умением находить Кримстоун.",
   "description.crim.peckster.boost": "+0.1 Кримстоун",
@@ -2443,7 +2443,7 @@
   "fish": "Рыба",
   "fish.caught": "Поймано рыбы: ",
   "fishFrenzy.info.one": "Сегодня ваши уловы рыбы увеличатся на 1!",
-  "fishFrenzy.specialEvent": "Особый день «Рыбное безумие",
+  "fishFrenzy.specialEvent": "Особый день «Рыбное безумие»‎",
   "fishermanModal.attractFish": "Привлеки рыбу, бросив в воду приманку.",
   "fishermanModal.baitAndResources": "Принеси мне наживку и ресурсы, и мы вытащим редчайшие призы, которые только может предложить океан!",
   "fishermanModal.bonusFish": "Поторопись, за каждый улов ты получишь дополнительную рыбу!",
@@ -4570,7 +4570,7 @@
   "skill.petalBlessed": "Мгновенно вырастить все цветы",
   "skill.petalledPerk": "10% шанс получить +1 цветок",
   "skill.pollenPowerUp": "+0,1 к урожаю от пчелиного роя (всего +0,3)",
-  "skill.powerSkill": "Активный йнавык",
+  "skill.powerSkill": "Активный навык",
   "skill.premiumWorms": "+10 Ускоряющих удобрений",
   "skill.rapidRig.buff": "-20% времени роста в комбайне",
   "skill.rapidRig.debuff": "+40% потребления нефти",
@@ -4594,9 +4594,9 @@
   "skill.sweetBonus": "+0.1 мёда на улей",
   "skill.swiftDecomposer": "-10% времени компостирования",
   "skill.swiftSizzle": "-40% времени приготовления на костре с нефтью",
-  "skill.tapProspector": "Добыча малых миниральных улзов в 1 клик",
+  "skill.tapProspector": "Добыча малых миниральных узлов в 1 клик",
   "skill.toughTree": "1/10 шанс получить +3 древесины",
-  "skill.treeBlitz": "Мгновено востановить все деревья",
+  "skill.treeBlitz": "Мгновено восстановить все деревья",
   "skill.treeCharge": "-10% времени роста деревьев",
   "skill.treeTurnaround": "15% вероятности мгновенного роста деревьев",
   "skill.turboCharged": "+5 фруктового удобрения",
